# so101_rosbag2lerobot_dataset

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
config/: config.yaml
local_dataset_ros2/data/lerobot_dataset_example/data/chunk-000/: file-000.parquet
local_dataset_ros2/data/lerobot_dataset_example/meta/: info.json  stats.json  tasks.parquet
local_dataset_ros2/data/lerobot_dataset_example/meta/episodes/chunk-000/: file-000.parquet
so101_rosbag2lerobot_dataset/: __init__.py  cli.py  config.py  constants.py  converter.py  io_bag.py  sample.py  sync.py  utils.py
tests/: test_utils.py
